--- a/screens/editar_cliente.html
+++ b/screens/editar_cliente.html
@@ -5,14 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Doguito Petshop | Actualizar cliente</title>
     <link rel="icon" href="../assets/img/doguitoadm.svg" type="image/x-icon" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="../assets/css/base/base.css" />
     <link rel="stylesheet" href="../assets/css/componentes/header.css" />
     <link rel="stylesheet" href="../assets/css/componentes/card.css" />
@@ -22,11 +16,7 @@
   </head>
   <body>
     <header class="header container">
-      <img
-        src="../assets/img/doguitoadm.svg"
-        alt="Logo Doguito"
-        class="header__logo"
-      />
+      <img src="../assets/img/doguitoadm.svg" alt="Logo Doguito" class="header__logo" />
       <nav>
         <ul class="header__list-nav">
           <li class="header__link"><a href="#">Dashboard</a></li>
@@ -43,28 +33,12 @@
         <h1 class="card__title">Editar</h1>
         <form action="#" class="flex flex--column" data-form>
           <div class="input-container">
-            <input
-              name="nombre"
-              id="nombre"
-              class="input"
-              type="text"
-              placeholder="nombre"
-              required
-              data-nombre
-            />
+            <input name="nombre" id="nombre" class="input" type="text" placeholder="nombre" required data-nombre />
             <label class="input-label" for="nombre">Nombre</label>
             <span class="input-menssage-error">Este campo es requerido</span>
           </div>
           <div class="input-container">
-            <input
-              name="email"
-              id="email"
-              class="input"
-              type="text"
-              placeholder="email"
-              required
-              data-email
-            />
+            <input name="email" id="email" class="input" type="text" placeholder="email" required data-email />
             <label class="input-label" for="email">Email</label>
             <span class="input-menssage-error">Este campo es requerido</span>
           </div>
@@ -72,5 +46,6 @@
         </form>
       </section>
     </main>
+    <script src="../controllers/actializar.controller.js" type="module"></script>
   </body>
 </html>
